# gol3d

./: .gitlab-ci.yml  Cargo.toml  README.md
benches/: game.rs
src/: game.rs  lib.rs  main.rs
