[package]
name = "gol3d"
version = "0.1.0"
authors = ["Nicolas Senaud <nicolas@senaud.fr>"]

[dependencies]
bencher = "0.1.5"
env_logger = "0.4.3"
glium = "0.19.0"
kiss3d = "0.12.0"
log = "0.4.1"
nalgebra = "0.13.1"
ndarray = "0.11.0"
ndarray-parallel = "0.7.0"

[[bench]]
name = "game"
harness = false
